added contact page and author on each page

--- a/_posts/2019-06-04-Garbage-CAN%21.md
+++ b/_posts/2019-06-04-Garbage-CAN%21.md
@@ -5,6 +5,7 @@ title: >
 hide_title: false
 tags: ['not security', 'poster']
 excerpt_separator: <!--more-->
+author: guy
 ---
 I often take breaks from vulnerability hunting, and occasionally I find myself doing some really random things.
 For example, I stumbled across [this](https://www.reddit.com/r/funny/comments/3saeoj/some_inspirational_words_from_oscar_the_grouch/) poster and decided to make a version of my own. I wanted to make one that is slightly more offensive so that it can be gifted to a good friend. Here is the final result.
